tests/fail/PostfixInc.java
package fail;

import java.lang.System;

public class PostfixInc {
    public static void main(String[] args) {
	System.out.println(1.0++);
    }
}
